# SESS-Backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
context/: Cargo.toml
context/src/: db.rs  lib.rs
db/src/: lib.rs
gqls/: Cargo.toml
gqls/src/: lib.rs  player.rs  server.rs
migration/: Cargo.toml
migration/src/: lib.rs  m2023_07_30t20_40_56_create_filters_table.rs  m2023_07_30t21_15_30_create_query_table.rs
migration/src/entities/: filters.rs  mod.rs  prelude.rs  query.rs
presentation/: Cargo.toml
presentation/src/: main.rs  schema.rs  setup_log.rs  start_warp.rs
presentation/src/start_warp/: graphiql.rs  graphql.rs  homepage.rs  mod.rs  playground.rs  schema.rs  start.rs  subscriptions.rs
queries/: Cargo.toml
queries/src/: lib.rs  statistics.rs
src/: main.rs
statistics/src/: lib.rs
subscriptions/: Cargo.toml
subscriptions/src/: filters.rs  lib.rs  player.rs  server.rs
