[package]
name = "sess_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamedig = { version = "0.2.2", features = [] }
async-stream = "0.3.5"
env_logger = "0.10.0"
futures = "0.3.28"
juniper = "0.15.11"
juniper_graphql_ws = "0.3.0"
juniper_warp = { version = "0.7.0", features = ["subscriptions"]}
log = "0.4.17"
serde = { version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"]}
warp = "0.3.5"
