[package]
name = "sess_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context" }
queries = { path = "../queries" }
subscriptions = { path = "../subscriptions" }

env_logger = "0.11.3"
futures = "0.3.28"
juniper = "0.16.1"
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"]}
juniper_warp = { version = "0.8.0", features = ["subscriptions"]}
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"]}
warp = { version = "0.3.7", features = ["tls"]}
