[package]
name = "subscriptions"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../context" }
gqls = { path = "../gqls" }

juniper = "0.15.11"
async-stream = "0.3.5"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"]}
gamedig = { version = "0.4.1" }
