[package]
name = "subscriptions"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../context" }
gqls = { path = "../gqls" }

juniper = "0.16.1"
async-stream = "0.3.5"
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"]}
gamedig = { version = "0.5.1" }
